 /* $Id: ChangeLog,v 1.1140 2000-09-22 10:47:21 bird Exp $ */

 2000-09-22: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - Win32k/Pe2Lx:
               -Always apply all-in-one-object aligment fix. This will
                solve lots of problems. (Hopefully temporary; I will explore
                a VMAllocMem flag for VDMs which allows allocation of
                pagealigned objects in the tiled arenas. The flag works
                as expected but I get IPEs during process cleanup...)
               -Corrected bug in applyFixups. Fixups was not applied when
                the all-in-one-object aligment fix was applied.
               -The problem with the build 14053 (testcase) kernels is solved.
                ldrOpenPath have got an addition parameter. Symbols added
                to the SymDB.
               -Win32k.sys build now requires h2inc.exe is present in
                the tools directory of the base DDK.
    - KERNEL32: Changed Pe2Lx to use module address (address of the header
                object) as hinstance. Some programs depends on this.
    - opengl\glu\nurbs\internals: Turned off optimization. Internal
                compiler error in release mode compiling sorter.cpp.

 2000-09-21: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - INCLUDE\makefiles: Made cleanrule omittable by defining NOCLEAN.
    - Pe2Lx:    Corrected/Made cleanrule.
    - Win32k:   New Microsoft C fix. Invokes it with no environment. Thanks goes to
                Serge Sterck for this discovery. I hope it works out well.


 2000-09-20: Markus Montkowski <mmontkowski@gmx.de>
    - KERNEL32: Implemented COM-port APIs
                Enhanced handlemanager to support device and handle data (for COM ports)
                Added IOCTL to oslibdos
    - INCLUDE\handlemanager.h os2win.h win32type.h: added COM definitions

 2000-09-19: Michal Necasek <mike@mendelu.cz>